# RentRadar

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: RentRadar.py
app/pages/: Charts.py  Chat.py  Map.py
examples/: explore.ipynb  ingest.ipynb  llm.ipynb  process_data_seed_db.ipynb
rentradar/api/: deploy.py  graphql.py  schema.py
rentradar/db/: duckdb.py
rentradar/ingest/: rentcast_client.py
rentradar/llm/: agent.py  templates.py
rentradar/process/: process_rentcast_data.py
rentradar/utils/: utils.py
